--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Work</a>
+                    <a class="nav-link" href="#course">course</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">
@@ -40,91 +40,118 @@
           </nav>
     </header>
     <!-- main section start from here -->
-    <section class="container bg-white my-4 rounded">
-        <div>
-            <h4 class="text-primary py-3">Top Players</h4>
-            <div class="row gy-4 pb-4">
-                <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
-                    <img width="56" height="56" src="images/players/player-1.png" alt="">
-                    <h6 class="ms-2">John Smith</h6>
-                </div>
-                <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
-                    <img width="56" height="56" src="images/players/player-2.png" alt="">
-                    <h6 class="ms-2">John Smith</h6>
-                </div>
-                <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
-                    <img width="56" height="56" src="images/players/player-3.png" alt="">
-                    <h6 class="ms-2">John Smith</h6>
-                </div>
-                <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
-                    <img width="56" height="56" src="images/players/player-4.png" alt="">
-                    <h6 class="ms-2">John Smith</h6>
-                </div>
-                <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
-                    <img width="56" height="56" src="images/players/player-5.png" alt="">
-                    <h6 class="ms-2">John Smith</h6>
-                </div>
-                <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
-                    <img width="56" height="56" src="images/players/player-6.png" alt="">
-                    <h6 class="ms-2">John Smith</h6>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <div>
-            <h4 class="text-primary py-3">Top Blogs</h4>
-            <div class="row gy-3">
-                <div class="col-12 col-md-12 col-lg-6 d-flex">
-                    <div class="row">
-                        <div class="col-12 col-md-4 mb-3">
-                            <img class="img-fluid" width="177" src="images/blogs/blog-1.png" alt="">
-                        </div>
-                        <div class="ps-2 col-12 col-md-6">
-                            <h4>13 of My Favorite
-                                UI/UX Goodies</h4>
-                                <p>By Danny Sapio</p>
-                        </div>
+    <main>
+        <section class="container bg-white my-4 rounded">
+            <div>
+                <h4 class="text-primary py-3">Top Players</h4>
+                <div class="row gy-4 pb-4">
+                    <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
+                        <img width="56" height="56" src="images/players/player-1.png" alt="">
+                        <h6 class="ms-2">John Smith</h6>
                     </div>
-                </div>
-                <div class="col-12 col-md-12 col-lg-6 d-flex">
-                    <div class="row">
-                        <div class="col-12 col-md-4 mb-3">
-                            <img class="img-fluid" width="177" src="images/blogs/blog-2.png" alt="">
-                        </div>
-                        <div class="ps-2 col-12 col-md-6">
-                            <h4>13 of My Favorite
-                                UI/UX Goodies</h4>
-                                <p>By Danny Sapio</p>
-                        </div>
+                    <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
+                        <img width="56" height="56" src="images/players/player-2.png" alt="">
+                        <h6 class="ms-2">John Smith</h6>
                     </div>
-                </div>
-                <div class="col-12 col-md-12 col-lg-6 d-flex">
-                    <div class="row">
-                        <div class="col-12 col-md-4 mb-3">
-                            <img class="img-fluid" width="177" src="images/blogs/blog-3.png" alt="">
-                        </div>
-                        <div class="ps-2 col-md-6">
-                            <h4>13 of My Favorite
-                                UI/UX Goodies</h4>
-                                <p>By Danny Sapio</p>
-                        </div>
+                    <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
+                        <img width="56" height="56" src="images/players/player-3.png" alt="">
+                        <h6 class="ms-2">John Smith</h6>
                     </div>
-                </div>
-                <div class="col-12 col-md-12 col-lg-6 d-flex">
-                    <div class="row">
-                        <div class="col-12 col-md-4 mb-3">
-                            <img class="img-fluid" width="177" src="images/blogs/blog-4.png" alt="">
-                        </div>
-                        <div class="ps-2 col-12 col-md-6">
-                            <h4>13 of My Favorite
-                                UI/UX Goodies</h4>
-                                <p>By Danny Sapio</p>
-                        </div>
+                    <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
+                        <img width="56" height="56" src="images/players/player-4.png" alt="">
+                        <h6 class="ms-2">John Smith</h6>
+                    </div>
+                    <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
+                        <img width="56" height="56" src="images/players/player-5.png" alt="">
+                        <h6 class="ms-2">John Smith</h6>
+                    </div>
+                    <div class="d-flex  align-items-center col-12 col-md-6 col-lg-4">
+                        <img width="56" height="56" src="images/players/player-6.png" alt="">
+                        <h6 class="ms-2">John Smith</h6>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+            <hr>
+            <div>
+                <h4 class="text-primary py-3">Top Blogs</h4>
+                <div class="row gy-3">
+                    <div class="col-12 col-md-12 col-lg-6 d-flex">
+                        <div class="row">
+                            <div class="col-12 col-md-4 mb-3">
+                                <img class="img-fluid" width="177" src="images/blogs/blog-1.png" alt="">
+                            </div>
+                            <div class="ps-2 col-12 col-md-6">
+                                <h4>13 of My Favorite
+                                    UI/UX Goodies</h4>
+                                    <p>By Danny Sapio</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-12 col-lg-6 d-flex">
+                        <div class="row">
+                            <div class="col-12 col-md-4 mb-3">
+                                <img class="img-fluid" width="177" src="images/blogs/blog-2.png" alt="">
+                            </div>
+                            <div class="ps-2 col-12 col-md-6">
+                                <h4>13 of My Favorite
+                                    UI/UX Goodies</h4>
+                                    <p>By Danny Sapio</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-12 col-lg-6 d-flex">
+                        <div class="row">
+                            <div class="col-12 col-md-4 mb-3">
+                                <img class="img-fluid" width="177" src="images/blogs/blog-3.png" alt="">
+                            </div>
+                            <div class="ps-2 col-md-6">
+                                <h4>13 of My Favorite
+                                    UI/UX Goodies</h4>
+                                    <p>By Danny Sapio</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-12 col-lg-6 d-flex">
+                        <div class="row">
+                            <div class="col-12 col-md-4 mb-3">
+                                <img class="img-fluid" width="177" src="images/blogs/blog-4.png" alt="">
+                            </div>
+                            <div class="ps-2 col-12 col-md-6">
+                                <h4>13 of My Favorite
+                                    UI/UX Goodies</h4>
+                                    <p>By Danny Sapio</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- footer sesction -->
+        <section class="container bg-white py-3 mb-3" id="course">
+            <h4 class="text-primary py-3">Latest Courses</h4>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4 mb-3 p-1 rounded shadow">
+                    <img class="img-fluid p-2" src="images/courses/course-1.png" alt="">
+                    <h4>React - The Complete </h4>
+                    <h4>Guide 2020</h4>
+                    <span class="text-danger">Reed Krakoff.</span>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-3 p-1 rounded shadow">
+                    <img class="img-fluid p-2" src="images/courses/course-2.png" alt="">
+                    <h4>React - The Complete </h4>
+                    <h4>Guide 2020</h4>
+                    <span class="text-danger">Reed Krakoff.</span>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-3 p-1 rounded shadow">
+                    <img class="img-fluid p-2" src="images/courses/course-3.png" alt="">
+                    <h4>React - The Complete </h4>
+                    <h4>Guide 2020</h4>
+                    <span class="text-danger">Reed Krakoff.</span>
+                </div>
+            </div>
+        </section>
+    </main>
+
 
 <!-- bootstrap-5 javascript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
